--- a/src/components/platform/Platform.scss
+++ b/src/components/platform/Platform.scss
@@ -1,5 +1,6 @@
 .ax-platform {
   display: flex;
+  flex: 1 1 auto;
   flex-direction: column;
   width: 100%;
   height: 100%;
